--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body {
   word-break: break-word;
 }
 
-#snap, #filtering {
+#snap, #filtering, #filtering2, #filtering3 {
   background-color: #d84a38;
   border: none;
   border-radius: 2px;
@@ -49,11 +49,6 @@ body {
   font-size: 0.8em;
   margin: 0 0 1em 0;
   padding: 0.5em 0.7em 0.6em 0.7em;
-}
-
-#snap{
-}
-#filtering{
 }
 
 button:active {
@@ -70,8 +65,8 @@ button[disabled]:hover {
 
 canvas {
   background-color: #ccc;
-  max-width: 50%;
-  width: 50%;
+  max-width: 40%;
+  width: 40%;
 }
 
 code {
@@ -229,7 +224,7 @@ video {
   background: #222;
   position: relative;
   left: 25%;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px 0px;
   --width: 50%;
   width: var(--width);
   height: calc(var(--width) * 0.75);
