--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body {
   word-break: break-word;
 }
 
-#snap, #filtering, #filtering2, #filtering3 {
+#snap, #filtering, #filtering2, #filtering3, #filtering4, #filtering5 {
   background-color: #d84a38;
   border: none;
   border-radius: 2px;
